--- a/views/index.html
+++ b/views/index.html
@@ -8,13 +8,12 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="/assets/css/app.css">
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-  <script src="/assets/js/babel-standalone/babel.min.js"></script>
 </head>
 
 <body>
   <div id="container"></div>
-  <script type="text/babel" src="/js/dist/init.js"></script>
-  <script type="text/babel" src="/js/dist/routes.js"></script>
+  <script src="/js/dist/init.js"></script>
+  <script src="/js/dist/routes.js"></script>
 </body>
 
 </html>
